# linkml-enhanced-template

./: Makefile  Pipfile  TARGETS  TODO.md  mkdocs.yml  setup.cfg
docs/: 404.html  index.html  search.html
docs/Building/: index.html
docs/FriendlyPerson/: index.html
docs/Person/: index.html
docs/Thing/: index.html
docs/additionalName/: index.html
docs/building__id/: index.html
docs/building__name/: index.html
docs/credits/: index.html
docs/friendly_person_knows/: index.html
docs/gender/: index.html
docs/givenName/: index.html
docs/home/: index.html
docs/identifier/: index.html
docs/name/: index.html
docs/person__age/: index.html
docs/person__first_name/: index.html
docs/person__id/: index.html
docs/person__knows/: index.html
docs/person__last_name/: index.html
docs/person__living/: index.html
docs/person__name/: index.html
docs/search/: search_index.json
docs/url/: index.html
examples/: basic.py  person.py
examples/graphql/: basic.graphql
examples/json/: basic.json  person.json
examples/jsonld/: basic.context.jsonld  basic.model.context.jsonld  person.context.jsonld  person.model.context.jsonld
examples/jsonschema/: basic.schema.json  person.schema.json
examples/owl/: basic.owl.ttl  expected_basic.owl.ttl
examples/rdf/: basic.model.ttl  basic.ttl  person.model.ttl  person.ttl
examples/schema/: basic.yaml  person.yaml
examples/shex/: basic.shex  basic.shexj  person.shex  person.shexj
model/ontology/: BodyParts.owl
model/schema/: sdo_person.yaml  slot_qualification.yaml
tests/: test_generate_basic.py
(+20 files in other folders)
