[metadata]
name = my_model
url = https://github.com/myorganization/my-model
author = Grunt P. Snooter
author-email = snooter@mailserver.com
summary = A model of something really good
home-page = https://myorganization.github.io/my-model
license = CC0 1.0 Universal
python-requires = >=3.7
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Healthcare Industry
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords =
    keyword1
    keyword2

[options]
include_package_data = True

[files]
packages =
    my_model

data-files = my_model/jsonld = my_model/jsonld/*
             my_model/json = my_model/json/*
             my_model/jsonschema = my_model/jsonschema/*
             my_model/model = my_model/model/*
             my_model/owl = my_model/owl/*
             my_model/rdf = my_model/rdf/*
             my_model/shex = my_model/shex/*
             my_model/model = my_model/model/*
             my_model/graphql = my_model/graphql/*

